# BongoSync

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt
Client/include/: CollisionDetector.h  FileWatcher.h  HandleBreak.h  HandleRegister.h  HandleShare.h  HandleStart.h  HandleSync.h  HandleUnshare.h  HashCalculator.h  MessageBuilder.h  MessageCreator.h  ServerCommunicator.h  Utility.h
Client/include/commandHandlers/: HandleBreak.h  HandleRegister.h  HandleShare.h  HandleStart.h  HandleSync.h  HandleUnshare.h
Client/include/communication/: MessageBuilder.h  ServerCommunicator.h
Client/include/fileServices/: ConflictResolver.h  FileChangeDetector.h  FileServices.h  FileWatcher.h  HashCalculator.h  MerkleTree.h
Client/libs/: dependencies.txt
Client/src/: CollisionDetector.cpp  FileWatcher.cpp  HandleBreak.cpp  HandleRegister.cpp  HandleShare.cpp  HandleStart.cpp  HandleSync.cpp  HandleUnshare.cpp  HashCalculator.cpp  MessageBuilder.cpp  MessageCreator.cpp  ServerCommunicator.cpp  Utility.cpp  main.cpp  main_main.cpp
Client/src/commandHandlers/: HandleBreak.cpp  HandleRegister.cpp  HandleShare.cpp  HandleStart.cpp  HandleSync.cpp  HandleUnshare.cpp
Client/src/communication/: MessageBuilder.cpp  ServerCommunicator.cpp
Client/src/fileServices/: ConflictResolver.cpp  FileChangeDetector.cpp  FileServices.cpp  FileWatcher.cpp  HashCalculator.cpp  MerkleTree.cpp
Client/tests/: FileWatcherTest.cpp  MerkleTreeTest.cpp  MessageBuilderTest.cpp  MockFileChangeDetector.cpp  test.cpp
Server/: CMakeLists.txt  setUpPostgres.sh
Server/include/: ClientCommunicator.h  Database.h  Utility.h
Server/include/Communciation/: MessageBuilder.h  MessageCreator.h  Session.h  SessionManager.h
Server/include/Database/: Database.h  DatabaseManager.h  FilesManager.h  SharedManager.h  UserManager.h  WorkspaceManager.h
Server/include/FileServices/: FileChangeDetector.h  HashCalculator.h  MerkleTree.h  MerkleTreeComparer.h
Server/include/Handlers/: HandleLogin.h  RegistrationHandler.h  SyncHandler.h
Server/lib/: libqp.sh
Server/src/: ClientCommunicator.cpp  Database.cpp  Utlility.cpp  main.cpp
Server/src/Communication/: MessageBuilder.cpp  Session.cpp  SessionManager.cpp
Server/src/Database/: Database.cpp  DatabseManager.cpp  FilesManager.cpp  SharedManager.cpp  UserManager.cpp  WorkspaceManager.cpp
Server/src/FileServices/: FileChangeDetector.cpp  HashCalculator.cpp  MerkleTree.cpp  MerkleTreeComparer.cpp
Server/src/Handlers/: HandleLogin.cpp  RegistrationHandler.cpp  SyncHandler.cpp
Server/tests/: MerkleTreeComparerTest.cpp  MerkleTreeTest.cpp
UML/: Bongo.mdj
